# Adaptive-Problem-Solving

./: .gitignore  Cargo.toml  LICENSE.md  README.md
backtracking/: Cargo.toml
backtracking/examples/: Cargo.toml  boj_14888_bruteforce.rs  boj_15649.rs  boj_15650.rs  boj_15651.rs  boj_2580.rs  boj_9663.rs
bisec/: Cargo.toml
bisec/examples/: Cargo.toml  boj_1208_collections_hashmap.rs  boj_14003.rs  boj_1654.rs  boj_1920.rs
boj/: Cargo.toml
bruteforce/: Cargo.toml
bruteforce/examples/: Cargo.toml  boj_1436.rs  boj_7568.rs
cumulative_sum/: Cargo.toml
cumulative_sum/examples/: Cargo.toml  boj_10986.rs  boj_11659.rs  boj_16139.rs  boj_2559.rs  boj_9527.rs
data_structure/: Cargo.toml
data_structure/examples/: Cargo.toml  boj_11478_string_hashmap.rs  boj_14425_string.rs  boj_1517.rs  boj_1620_string_hashmap.rs  boj_1764_string_hashmap.rs
divandcon/: Cargo.toml
divandcon/examples/: Cargo.toml  boj_10830.rs  boj_11401_Fermat_s_little_theorem.rs  boj_11444.rs  boj_1780.rs  boj_2630.rs  boj_6549.rs
dp/: Cargo.toml
dp/examples/: Cargo.toml  boj_11053.rs  boj_11066.rs  boj_12852.rs  boj_12865_knapsack.rs  boj_1328.rs  boj_1904.rs  boj_1932.rs  boj_2156_recurrence.rs  boj_2293.rs  boj_24416.rs  boj_24416_fibonacci.rs  boj_2565_lis.rs  boj_9184.rs  boj_9251_longest_common_subsequence.rs  boj_9252_LCS.rs  boj_9461.rs
examples/: Cargo.toml
examples/backtracking/: boj_15649.rs  boj_15650.rs  boj_15651_bruteforce.rs  boj_15652.rs  boj_2580.rs
examples/bisec/: boj_10816.rs  boj_14003.rs  boj_1920.rs  boj_2110.rs  boj_2805.rs  boj_p4_11375_dfs.rs
examples/bitmask/: boj_g4_1062_bitmask_bruteforce_dfs.rs
examples/bruteforce/: boj_1018.rs  boj_1436.rs  boj_2231.rs  boj_2798.rs  boj_7568.rs  boj_s2_18111.rs
examples/data_structure/: boj_10815_map_binsearch.rs  boj_1269_hash.rs  boj_14425_string.rs  boj_1620_string_hashmap.rs  boj_1764_string_hashmap.rs  boj_g4_9935_stack.rs  boj_gold3_17299_stack.rs  boj_gold4_17298_stack.rs
examples/divandcon/: boj_10830.rs  boj_11401_Fermat_s_little_theorem.rs  boj_1780.rs  boj_1992.rs  boj_2740.rs  boj_6549.rs
examples/dp/: boj_1005.rs  boj_11049.rs  boj_11053.rs  boj_11054.rs  boj_12865_knapsack.rs  boj_13263_convex_hull_trick.rs  boj_1904_recurrence_relation.rs  boj_1932.rs  boj_24416_fibonacci.rs  boj_2565_lis.rs  boj_2579_recurrence.rs  boj_2629_knapsack.rs  boj_7579_0-1knapsack.rs  boj_9184_control_statement_or_recursion.rs  boj_9251_longest_common_subsequence.rs  boj_9252_LCS.rs  boj_9461.rs  boj_g3_7579_0-1knapsack.rs  boj_s2_11055.rs  boj_s2_11055_LIS.rs
examples/geometry/: boj_1004.rs  boj_11758_ccw.rs  boj_17387.rs  boj_17387_ccw.rs  boj_2477.rs  boj_b2_1297.rs  boj_g1_9015.rs  boj_g2_7869.rs  boj_g3_12781_ccw.rs  boj_g4_11662_ternary_search.rs  boj_g4_14583.rs  boj_g4_16958.rs  boj_g4_22942_stack.rs  boj_g4_2650.rs  boj_g4_2987.rs  boj_g4_2987_ccw_convex.rs  boj_g5_11664.rs  boj_g5_20157.rs  boj_gold3_17386_ccw.rs  boj_gold5_2166_shoelace.rs  boj_p2_10254_cvxh_grahamScan_rotatingCalipers.rs  boj_p2_2261_btree_sweeping.rs  boj_p2_9373_mst_dijkstraOrPrim.rs  boj_p3_4225_cvxh.rs  boj_p3_9240_cvxh.rs  boj_p4_3679_cvxh.rs  boj_p4_3679_cvxh_grahamScan.rs  boj_p5_10523_collinearity_divandconquer.rs  boj_p5_2699_convexhull.rs  boj_p5_4181_cvxh.rs  boj_p5_4181_cvxh_grahamScan.rs  boj_s1_2527.rs  boj_s2_1198_shoelace_bruteforce.rs  boj_s3_10655_taxi_geometry.rs  boj_s3_1485.rs  boj_s4_1358.rs
examples/graph/: boj_10026_bfs.rs  boj_10775_union_find.rs  boj_1167_tree_s_dia.rs  boj_1197_spanning_tree.rs  boj_1238_dijkstra.rs  boj_1240_bfs.rs  boj_16234_bfs.rs  boj_1647.rs  boj_2252_topological_sort.rs  boj_24479_dfs.rs  boj_24479_dfs_rc.rs  boj_24480_dfs.rs  boj_24481_bfs.rs  boj_24481_dfs.rs  boj_2623_topological_sort.rs  boj_gold3_2206_bfs.rs  boj_gold5_16928.rs  boj_s1_2468_bfs_dfs.rs  boj_s1_2583_bfs.rs  boj_s2_2644_bfs.rs  boj_s2_4963_dfs_or_bfs.rs  boj_silver2_1012_bfs.rs  boj_silver2_24444_bfs.rs  boj_silver2_24445_bfs.rs
examples/greedy/: boj_11047.rs  boj_13305.rs  boj_1541.rs  boj_1931.rs  boj_s4_1026.rs
examples/imple/: boj_1022.rs  boj_23730_TBD.rs  boj_4929.rs  boj_g3_10810.rs
examples/math/: boj_1007.rs  boj_12855.rs  boj_16134_nCrMODprime_Fermat_little_theorem.rs  boj_1644_get_primes_and_bisec.rs  boj_9506.rs  boj_silver1_6588_prime.rs  fail_boj_s3_27965.rs
examples/numbcomb/: boj_1037.rs  boj_11051_dp_binomial_coefficient.rs  boj_1676.rs  boj_1934.rs  boj_2609.rs  boj_2981_euclidean.rs  boj_3036.rs  boj_5086.rs  boj_9375.rs
examples/prefix_sum/: boj_10986.rs  boj_11659.rs  boj_11660.rs  boj_2559.rs  boj_25682.rs  boj_g4_1806_twopointer.rs  boj_s3_11441.rs
examples/priority_queue/: boj_11279.rs  boj_11286.rs  boj_1927.rs
examples/qdeck/: boj_18258.rs  boj_1966.rs  boj_2164.rs
examples/recursion/: boj_11729.rs  boj_2447.rs
examples/stack/: boj_10828.rs  boj_1874.rs  boj_4949_string.rs  boj_9012.rs  boj_platinum5_1725.rs
examples/str/: boj_1305_kmp.rs  boj_p4_5670.rs
examples/two_pointer/: boj_g4_15961_slidingWindow.rs  boj_g5_2096_slidingWindow.rs  boj_g5_2230.rs  boj_s2_12891_slidingWindow.rs
geometry/: Cargo.toml
geometry01/: Cargo.toml
geometry01/examples/: Cargo.toml  boj_1002.rs  boj_1004.rs  boj_1085.rs  boj_2477.rs  boj_3009.rs  boj_3053.rs
graph/: Cargo.toml
graph/examples/: Cargo.toml  boj_1043.rs  boj_1167.rs  boj_1197_spanning_tree.rs  boj_1238.rs  boj_1647.rs  boj_1766_dag.rs  boj_2252_topological_sort.rs  boj_2623_topological_sort.rs
greedy/: Cargo.toml
greedy/examples/: Cargo.toml  boj_11047.rs  boj_11399.rs  boj_1541.rs  boj_1931.rs
img/: prodcons.png:Zone.Identifier
imple/: Cargo.toml
imple/examples/: Cargo.toml  boj_1009.rs
math/examples/: Cargo.toml  boj_1007.rs  boj_1011.rs  boj_1644_get_primes_and_bisec.rs
numbcomb/examples/: Cargo.toml  boj_1010.rs  boj_1037.rs  boj_11050.rs  boj_11051_dp.rs  boj_2004_binomial_coefficient.rs  boj_2609.rs  boj_2981.rs  boj_5086.rs
qdeck/examples/: Cargo.toml  boj_1021.rs  boj_10866.rs  boj_11866.rs  boj_18258.rs  boj_2164.rs  boj_5430.rs
stack/examples/: Cargo.toml  boj_10773.rs  boj_10828.rs  boj_9012.rs
(+255 files in other folders)
