[package]
name = "examples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[example]]
name = "boj_15649"
path = "backtracking/boj_15649.rs"

[[example]]
name = "boj_15650"
path = "backtracking/boj_15650.rs"

[[example]]
name = "boj_15651"
path = "backtracking/boj_15651_bruteforce.rs"

[[example]]
name = "boj_15652"
path = "backtracking/boj_15652.rs"

[[example]]
name = "boj_9663"
path = "backtracking/boj_9663.rs"

[[example]]
name = "boj_14888"
path = "backtracking/boj_14888_bruteforce.rs"

[[example]]
name = "boj_2580"
path = "backtracking/boj_2580.rs"

[[example]]
name = "boj_1920"
path = "bisec/boj_1920.rs"

[[example]]
name = "boj_10816"
path = "bisec/boj_10816.rs"

[[example]]
name = "boj_1654"
path = "bisec/boj_1654.rs"

[[example]]
name = "boj_2805"
path = "bisec/boj_2805.rs"

[[example]]
name = "boj_14003"
path = "bisec/boj_14003.rs"

[[example]]
name = "boj_2110"
path = "bisec/boj_2110.rs"

[[example]]
name = "boj_1208"
path = "bisec/boj_1208_collections_hashmap.rs"

[[example]]
name = "boj_2798"
path = "bruteforce/boj_2798.rs"

[[example]]
name = "boj_2231"
path = "bruteforce/boj_2231.rs"

[[example]]
name = "boj_7568"
path = "bruteforce/boj_7568.rs"

[[example]]
name = "boj_1018"
path = "bruteforce/boj_1018.rs"

[[example]]
name = "boj_1436"
path = "bruteforce/boj_1436.rs"

[[example]]
name = "boj_11659"
path = "prefix_sum/boj_11659.rs"

[[example]]
name = "boj_2559"
path = "prefix_sum/boj_2559.rs"

[[example]]
name = "boj_16139"
path = "prefix_sum/boj_16139.rs"

[[example]]
name = "boj_9527"
path = "prefix_sum/boj_9527.rs"

[[example]]
name = "boj_10986"
path = "prefix_sum/boj_10986.rs"

[[example]]
name = "boj_11660"
path = "prefix_sum/boj_11660.rs"

[[example]]
name = "boj_25682"
path = "prefix_sum/boj_25682.rs"

[[example]]
name = "boj_10815"
path = "data_structure/boj_10815_map_binsearch.rs"

[[example]]
name = "boj_14425"
path = "data_structure/boj_14425_string.rs"

[[example]]
name = "boj_1620"
path = "data_structure/boj_1620_string_hashmap.rs"

[[example]]
name = "boj_1764"
path = "data_structure/boj_1764_string_hashmap.rs"

[[example]]
name = "boj_1269"
path = "data_structure/boj_1269_hash.rs"

[[example]]
name = "boj_11478"
path = "data_structure/boj_11478_string_hashmap.rs"

[[example]]
name = "boj_1517"
path = "data_structure/boj_1517.rs"

[[example]]
name = "boj_2630"
path = "divandcon/boj_2630.rs"

[[example]]
name = "boj_1992"
path = "divandcon/boj_1992.rs"

[[example]]
name = "boj_1780"
path = "divandcon/boj_1780.rs"

[[example]]
name = "boj_11401"
path = "divandcon/boj_11401_Fermat_s_little_theorem.rs"

[[example]]
name = "boj_2740"
path = "divandcon/boj_2740.rs"

[[example]]
name = "boj_10830"
path = "divandcon/boj_10830.rs"

[[example]]
name = "boj_11444"
path = "divandcon/boj_11444.rs"

[[example]]
name = "boj_6549"
path = "divandcon/boj_6549.rs"

[[example]]
name = "boj_24416"
path = "dp/boj_24416_fibonacci.rs"

[[example]]
name = "boj_9184"
path = "dp/boj_9184_control_statement_or_recursion.rs"

[[example]]
name = "boj_1904"
path = "dp/boj_1904_recurrence_relation.rs"

[[example]]
name = "boj_9461"
path = "dp/boj_9461.rs"

[[example]]
name = "boj_1932"
path = "dp/boj_1932.rs"

[[example]]
name = "boj_2579"
path = "dp/boj_2579_recurrence.rs"

[[example]]
name = "boj_2156"
path = "dp/boj_2156_recurrence.rs"

[[example]]
name = "boj_11053"
path = "dp/boj_11053.rs"

[[example]]
name = "boj_11054"
path = "dp/boj_11054.rs"

[[example]]
name = "boj_2565"
path = "dp/boj_2565_lis.rs"

[[example]]
name = "boj_9251"
path = "dp/boj_9251_longest_common_subsequence.rs"

[[example]]
name = "boj_12865"
path = "dp/boj_12865_knapsack.rs"

[[example]]
name = "boj_1005"
path = "dp/boj_1005.rs"

[[example]]
name = "boj_9252"
path = "dp/boj_9252_LCS.rs"

[[example]]
name = "boj_2293"
path = "dp/boj_2293.rs"

[[example]]
name = "boj_11066"
path = "dp/boj_11066.rs"

[[example]]
name = "boj_1328"
path = "dp/boj_1328.rs"

[[example]]
name = "boj_12852"
path = "dp/boj_12852.rs"

[[example]]
name = "boj_1085"
path = "geometry/boj_1085.rs"

[[example]]
name = "boj_3009"
path = "geometry/boj_3009.rs"

[[example]]
name = "boj_4153"
path = "geometry/boj_4153.rs"

[[example]]
name = "boj_2477"
path = "geometry/boj_2477.rs"

[[example]]
name = "boj_3053"
path = "geometry/boj_3053.rs"

[[example]]
name = "boj_1002"
path = "geometry/boj_1002.rs"

[[example]]
name = "boj_1004"
path = "geometry/boj_1004.rs"

[[example]]
name = "boj_17387"
path = "geometry/boj_17387_ccw.rs"

[[example]]
name = "boj_1043"
path = "graph/boj_1043.rs"

[[example]]
name = "boj_1167"
path = "graph/boj_1167_tree_s_dia.rs"

[[example]]
name = "boj_1238"
path = "graph/boj_1238_dijkstra.rs"

[[example]]
name = "boj_1197"
path = "graph/boj_1197_spanning_tree.rs"

[[example]]
name = "boj_1766"
path = "graph/boj_1766_dag.rs"

[[example]]
name = "boj_1647"
path = "graph/boj_1647.rs"

[[example]]
name = "boj_2623"
path = "graph/boj_2623_topological_sort.rs"

[[example]]
name = "boj_2252"
path = "graph/boj_2252_topological_sort.rs"

[[example]]
name = "boj_10775"
path = "graph/boj_10775_union_find.rs"

[[example]]
name = "boj_1541"
path = "greedy/boj_1541.rs"

[[example]]
name = "boj_13305"
path = "greedy/boj_13305.rs"

[[example]]
name = "boj_11047"
path = "greedy/boj_11047.rs"

[[example]]
name = "boj_1931"
path = "greedy/boj_1931.rs"

[[example]]
name = "boj_11399"
path = "greedy/boj_11399.rs"

[[example]]
name = "boj_1022"
path = "imple/boj_1022.rs"

[[example]]
name = "boj_23730"
path = "imple/boj_s3_23730.rs"

[[example]]
name = "boj_1009"
path = "imple/boj_1009.rs"

[[example]]
name = "boj_1011"
path = "math/boj_1011.rs"

[[example]]
name = "boj_1007"
path = "math/boj_1007.rs"

#[[example]]
#name = "boj_12855"
#path = "math/boj_12855.rs"

[[example]]
name = "boj_1644"
path = "math/boj_1644_get_primes_and_bisec.rs"

[[example]]
name = "boj_5086"
path = "numbcomb/boj_5086.rs"

[[example]]
name = "boj_1037"
path = "numbcomb/boj_1037.rs"

[[example]]
name = "boj_2609"
path = "numbcomb/boj_2609.rs"

[[example]]
name = "boj_1934"
path = "numbcomb/boj_1934.rs"

[[example]]
name = "boj_2981"
path = "numbcomb/boj_2981_euclidean.rs"

[[example]]
name = "boj_3036"
path = "numbcomb/boj_3036.rs"

[[example]]
name = "boj_11050"
path = "numbcomb/boj_11050.rs"

[[example]]
name = "boj_11051"
path = "numbcomb/boj_11051_dp_binomial_coefficient.rs"

[[example]]
name = "boj_1010"
path = "numbcomb/boj_1010.rs"

[[example]]
name = "boj_9375"
path = "numbcomb/boj_9375.rs"

[[example]]
name = "boj_1676"
path = "numbcomb/boj_1676.rs"

[[example]]
name = "boj_2004"
path = "numbcomb/boj_2004_binomial_coefficient.rs"

[[example]]
name = "boj_11279"
path = "priority_queue/boj_11279.rs"

[[example]]
name = "boj_1927"
path = "priority_queue/boj_1927.rs"

[[example]]
name = "boj_11286"
path = "priority_queue/boj_11286.rs"

[[example]]
name = "boj_18258"
path = "qdeck/boj_18258.rs"

[[example]]
name = "boj_2164"
path = "qdeck/boj_2164.rs"

[[example]]
name = "boj_11866"
path = "qdeck/boj_11866.rs"

[[example]]
name = "boj_1966"
path = "qdeck/boj_1966.rs"

[[example]]
name = "boj_10866"
path = "qdeck/boj_10866.rs"

[[example]]
name = "boj_1021"
path = "qdeck/boj_1021.rs"

[[example]]
name = "boj_5430"
path = "qdeck/boj_5430.rs"

[[example]]
name = "boj_24060"
path = "recursion/boj_24060_merge_sort.rs"

[[example]]
name = "boj_11729"
path = "recursion/boj_11729.rs"

[[example]]
name = "boj_2447"
path = "recursion/boj_2447.rs"

[[example]]
name = "boj_10773"
path = "stack/boj_10773.rs"

[[example]]
name = "boj_4949"
path = "stack/boj_4949_string.rs"

[[example]]
name = "boj_10828"
path = "stack/boj_10828.rs"

[[example]]
name = "boj_9012"
path = "stack/boj_9012.rs"

[[example]]
name = "boj_1874"
path = "stack/boj_1874.rs"

[[example]]
name = "boj_11758"
path = "geometry/boj_11758_ccw.rs"

[[example]]
name = "boj_1305"
path = "str/boj_1305_kmp.rs"

[[example]]
name = "boj_1557"
path = "math/boj_1557_mobius_bisec.rs"

[[example]]
name = "boj_18185"
path = "greedy/boj_18185.rs"

[[example]]
name = "boj_18186"
path = "greedy/boj_18186.rs"

[[example]]
name = "boj_4008"
path = "dp/boj_4008_prefix_sum_convex_hull_trick.rs"

[[example]]
name = "boj_13263"
path = "dp/boj_13263_convex_hull_trick.rs"

[[example]]
name = "boj_24479"
path = "graph/boj_24479_dfs_rc.rs"

[[example]]
name = "boj_24480"
path = "graph/boj_24480_dfs.rs"

[[example]]
name = "boj_24481"
path = "graph/boj_24481_bfs.rs"

[[example]]
name = "boj_9506"
path = "math/boj_9506.rs"

[[example]]
name = "boj_24313"
path = "math/boj_24313.rs"

[[example]]
name = "boj_1240"
path = "graph/boj_1240_bfs.rs"

[[example]]
name = "boj_16134"
path = "math/boj_16134_nCrMODprime_Fermat_little_theorem.rs"

[[example]]
name = "boj_10026"
path = "graph/boj_10026_bfs.rs"

[[example]]
name = "boj_16234"
path = "graph/boj_16234_bfs.rs"

[[example]]
name = "boj_1330"
path = "imple/boj_1330.rs"

[[example]]
name = "boj_24725"
path = "bruteforce/boj_24725.rs"

[[example]]
name = "boj_11049"
path = "dp/boj_11049.rs"

[[example]]
name = "boj_1520"
path = "graph/boj_1520_dfs_dp.rs"

[[example]]
name = "boj_4929"
path = "imple/boj_4929.rs"

[[example]]
name = "boj_2629"
path = "dp/boj_2629_0-1knapsack.rs"

[[example]]
name = "boj_7579"
path = "dp/boj_g3_7579_0-1knapsack.rs"

[[example]]
name = "boj_9935"
path = "data_structure/boj_g4_9935_stack.rs"

[[example]]
name = "boj_17298"
path = "data_structure/boj_g4_17298_stack.rs"

[[example]]
name = "boj_17299"
path = "data_structure/boj_g3_17299_stack.rs"

[[example]]
name = "boj_1725"
path = "stack/boj_p5_1725.rs"

[[example]]
name = "boj_3015"
path = "stack/boj_p5_3015.rs"

[[example]]
name = "boj_6588"
path = "math/boj_s1_6588_prime.rs"

[[example]]
name = "boj_24444"
path = "graph/boj_s2_24444_bfs.rs"

[[example]]
name = "boj_24445"
path = "graph/boj_s2_24445_bfs.rs"

[[example]]
name = "boj_16928"
path = "graph/boj_g5_16928.rs"

[[example]]
name = "boj_1012"
path = "graph/boj_s2_1012_bfs.rs"

[[example]]
name = "boj_7569"
path = "graph/boj_g5_7569_bfs.rs"

[[example]]
name = "boj_2206"
path = "graph/boj_g3_2206_bfs.rs"

[[example]]
name = "boj_2166"
path = "geometry/boj_g5_2166_shoelace.rs"

[[example]]
name = "boj_17386"
path = "geometry/boj_g3_17386_ccw.rs"

[[example]]
name = "boj_1708"
path = "geometry/boj_p5_1708_ccw_convex_hull.rs"

[[example]]
name = "boj_1027"
path = "geometry/boj_g4_1027_visible_building.rs"

[[example]]
name = "boj_1358"
path = "geometry/boj_s4_1358.rs"

[[example]]
name = "boj_2527"
path = "geometry/boj_s1_2527.rs"

[[example]]
name = "boj_1062"
path = "bitmask/boj_g4_1062_bitmask_bruteforce_dfs.rs"

[[example]]
name = "boj_1485"
path = "geometry/boj_s3_1485.rs"

[[example]]
name = "boj_15894"
path = "geometry/boj_b3_15894.rs"

[[example]]
name = "boj_10216"
path = "geometry/boj_g4_10216_stack_dfs.rs"

[[example]]
name = "boj_25308"
path = "geometry/boj_g4_25308_ccw_dfs.rs"

[[example]]
name = "boj_11662"
path = "geometry/boj_g4_11662_ternary_search.rs"

[[example]]
name = "boj_16931"
path = "geometry/boj_s2_16931.rs"

[[example]]
name = "boj_1069"
path = "geometry/boj_g3_1069_adhoc.rs"

[[example]]
name = "boj_1198"
path = "geometry/boj_s2_1198_shoelace_bruteforce.rs"

[[example]]
name = "boj_7869"
path = "geometry/boj_g2_7869.rs"

[[example]]
name = "boj_2699"
path = "geometry/boj_p5_2699_convexhull.rs"

[[example]]
name = "boj_3495"
path = "geometry/boj_s1_3495.rs"

[[example]]
name = "boj_16958"
path = "geometry/boj_g4_16958.rs"

[[example]]
name = "boj_22942"
path = "geometry/boj_g4_22942_stack.rs"

[[example]]
name = "boj_10988"
path = "str/boj_b2_10988_palindrome.rs"

[[example]]
name = "boj_15973"
path = "geometry/boj_s1_15973.rs"

[[example]]
name = "boj_1064"
path = "geometry/boj_s5_1064.rs"

[[example]]
name = "boj_10655"
path = "geometry/boj_s3_10655_taxi_geometry.rs"

[[example]]
name = "boj_14681"
path = "geometry/boj_b5_14681.rs"

[[example]]
name = "boj_1297"
path = "geometry/boj_b2_1297.rs"

[[example]]
name = "boj_12781"
path = "geometry/boj_g3_12781_ccw.rs"

[[example]]
name = "boj_25304"
path = "math/boj_b5_25304.rs"

[[example]]
name = "boj_9015"
path = "geometry/boj_g1_9015.rs"

[[example]]
name = "boj_10810"
path = "imple/boj_g3_10810.rs"

[[example]]
name = "boj_10813"
path = "imple/boj_b2_10813.rs"

[[example]]
name = "boj_17371"
path = "geometry/boj_g1_17371.rs"

[[example]]
name = "boj_14583"
path = "geometry/boj_g4_14583.rs"

[[example]]
name = "boj_27866"
path = "imple/boj_g5_27866.rs"

[[example]]
name = "boj_6439"
path = "geometry/boj_g1_6439_ccw.rs"

[[example]]
name = "boj_11664"
path = "geometry/boj_g5_11664.rs"

[[example]]
name = "boj_2650"
path = "geometry/boj_g4_2650.rs"

[[example]]
name = "boj_10101"
path = "geometry/boj_b4_10101.rs"

[[example]]
name = "boj_20157"
path = "geometry/boj_g5_20157.rs"

[[example]]
name = "boj_2987"
path = "geometry/boj_g4_2987_ccw_convex.rs"

[[example]]
name = "boj_2162"
path = "geometry/boj_p5_2162_ccw_disjointset.rs"

[[example]]
name = "boj_5615"
path = "math/boj_p1_5615_prime_miler-rabin.rs"

[[example]]
name = "boj_10523"
path = "geometry/boj_p5_10523_collinearity_divandconquer.rs"

[[example]]
name = "boj_11375"
path = "bisec/boj_p4_11375_dfs.rs"

[[example]]
name = "boj_2261"
path = "geometry/boj_p2_2261_btree_sweeping.rs"

[[example]]
name = "boj_27965"
path = "math/boj_s3_27965_bigint.rs"

[[example]]
name = "boj_1259"
path = "str/boj_b1_1259_palindrome.rs"

[[example]]
name = "boj_15829"
path = "str/boj_b2_15829.rs"

[[example]]
name = "boj_18111"
path = "bruteforce/boj_s2_18111.rs"

[[example]]
name = "boj_9240"
path = "geometry/boj_p3_9240_cvxh.rs"

[[example]]
name = "boj_1067"
path = "divandcon/boj_p1_1067_fft.rs"

[[example]]
name = "boj_10254"
path = "geometry/boj_p2_10254_cvxh_grahamScan_rotatingCalipers.rs"

[[example]]
name = "boj_9373"
path = "geometry/boj_p2_9373_mst_dijkstraOrPrim.rs"

[[example]]
name = "boj_3679"
path = "geometry/boj_p4_3679_cvxh_grahamScan.rs"

[[example]]
name = "boj_5670"
path = "str/boj_p4_5670_trie.rs"

[[example]]
name = "boj_4181"
path = "geometry/boj_p5_4181_cvxh_grahamScan.rs"

[[example]]
name = "boj_4225"
path = "geometry/boj_p3_4225_cvxh.rs"

[[example]]
name = "boj_4963"
path = "graph/boj_s2_4963_dfs_or_bfs.rs"

[[example]]
name = "boj_2468"
path = "graph/boj_s1_2468_bfs_dfs.rs"

[[example]]
name = "boj_14502"
path = "graph/boj_g4_14502_bfs.rs"

[[example]]
name = "boj_11725"
path = "graph/boj_s2_11725_bfs_dfs.rs"