[package]
name = "examples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[example]]
name = "boj_15649"
path = "boj_15649"

[[example]]
name = "boj_15650"
path = "boj_15650"

[[example]]
name = "boj_15651"
path = "boj_15651"