[package]
name = "examples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[example]]
name = "boj_1920"
path = "boj_1920"

[[example]]
name = "boj_10816"
path = "boj_10816"

[[example]]
name = "boj_1654"
path = "boj_1654"

[[example]]
name = "boj_2805"
path = "boj_2805"

[[example]]
name = "boj_14003"
path = "boj_14003"

[[example]]
name = "boj_2110"
path = "boj_2110"