[package]
name = "examples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[example]]
name = "boj_2798"
path = "boj_2798"

[[example]]
name = "boj_2231"
path = "boj_2231"

[[example]]
name = "boj_7568"
path = "boj_7568"

[[example]]
name = "boj_1018"
path = "boj_1018"