[package]
name = "examples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[example]]
name = "boj_11659"
path = "boj_11659"

[[example]]
name = "boj_2559"
path = "boj_2559"

[[example]]
name = "boj_16139"
path = "boj_16139"

[[example]]
name = "boj_9527"
path = "boj_9527"