[package]
name = "examples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[example]]
name = "boj_10815_map_binsearch"
path = "boj_10815_map_binsearch"

[[example]]
name = "boj_14425_string"
path = "boj_14425_string"

[[example]]
name = "boj_1620_string_hashmap"
path = "boj_1620_string_hashmap"

[[example]]
name = "boj_1764_string_hashmap"
path = "boj_1764_string_hashmap"

[[example]]
name = "boj_1269_hash"
path = "boj_1269_hash"