[package]
name = "examples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[example]]
name = "boj_24416_fibonacci"
path = "boj_24416_fibonacci"

[[example]]
name = "boj_9184_control_statement_or_recursion"
path = "boj_9184_control_statement_or_recursion"

[[example]]
name = "boj_1904_recurrence_relation"
path = "boj_1904_recurrence_relation"

[[example]]
name = "boj_9461"
path = "boj_9461"

[[example]]
name = "boj_1932"
path = "boj_1932"

[[example]]
name = "boj_2579_recurrence"
path = "boj_2579_recurrence"

[[example]]
name = "boj_2156_recurrence"
path = "boj_2156_recurrence"

[[example]]
name = "boj_11053"
path = "boj_11053"

[[example]]
name = "boj_11054"
path = "boj_11054"

[[example]]
name = "boj_2565_lis"
path = "boj_2565_lis"

[[example]]
name = "boj_9251_longest_common_subsequence"
path = "boj_9251_longest_common_subsequence"

[[example]]
name = "boj_12865_knapsack"
path = "boj_12865_knapsack"