[package]
name = "examples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[example]]
name = "boj_1085"
path = "boj_1085"

[[example]]
name = "boj_3009"
path = "boj_3009"

[[example]]
name = "boj_4153"
path = "boj_4153"

[[example]]
name = "boj_2477"
path = "boj_2477"

[[example]]
name = "boj_3053"
path = "boj_3053"

[[example]]
name = "boj_1002"
path = "boj_1002"