[package]
name = "examples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[example]]
name = "boj_1043"
path = "boj_1043"

[[example]]
name = "boj_1167_tree_s_dia"
path = "boj_1167_tree_s_dia"

[[example]]
name = "boj_1238_dijkstra"
path = "boj_1238_dijkstra"

[[example]]
name = "boj_1197_spanning_tree"
path = "boj_1197_spanning_tree"

[[example]]
name = "boj_1766"
path = "boj_1766"