[package]
name = "examples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[example]]
name = "boj_1541"
path = "boj_1541"

[[example]]
name = "boj_13305"
path = "boj_13305"

[[example]]
name = "boj_11047"
path = "boj_11047"

[[example]]
name = "boj_1931"
path = "boj_1931"

[[example]]
name = "boj_11399"
path = "boj_11399"