[package]
name = "examples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[example]]
name = "boj_1022"
path = "boj_1022"

[[example]]
name = "boj_23730_TBD"
path = "boj_23730_TBD"

[[example]]
name = "boj_1009"
path = "boj_1009.rs"