[package]
name = "examples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[example]]
name = "boj_1011"
path = "boj_1011"

[[example]]
name = "boj_1007"
path = "boj_1007"

[[example]]
name = "boj_12855"
path = "boj_12855"