[package]
name = "examples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[example]]
name = "boj_5086"
path = "boj_5086"

[[example]]
name = "boj_1037"
path = "boj_1037"

[[example]]
name = "boj_2609"
path = "boj_2609"

[[example]]
name = "boj_1934"
path = "boj_1934"

[[example]]
name = "boj_2981"
path = "boj_2981"

[[example]]
name = "boj_3036"
path = "boj_3036"

[[example]]
name = "boj_11050"
path = "boj_11050"

[[example]]
name = "boj_11051_dp"
path = "boj_11051_dp"

[[example]]
name = "boj_1010"
path = "boj_1010"

[[example]]
name = "boj_9375"
path = "boj_9375"