[package]
name = "examples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[example]]
name = "boj_18258"
path = "boj_18258"

[[exmaple]]
name = "boj_2164"
path = "boj_2164"

[[example]]
name = "boj_11866"
path = "boj_11866"

[[example]]
name = "boj_1966"
path = "boj_1966"

[[example]]
name = "boj_10866"
path = "boj_10866"