[package]
name = "examples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[example]]
name = "boj_10773"
path = "boj_10773"

[[example]]
name = "boj_4949_string"
path = "boj_4949_string"

[[example]]
name = "boj_10828"
path = "boj_10828"

[[example]]
name = "boj_9012"
path = "boj_9012"

[[example]]
name = "boj_1874"
path = "boj_1874"